# spaceforge-xai

./: .gitignore  CMakeLists.txt  LICENSE  cupola.surf  log.capi  readme.md  run.logclear  wafer_300mm.stl
Sim/: CMakeLists.txt  dlink.cu  readmeSim.md  run.sh  run_no_build.sh  run_orbit.slurm  run_orbit2.slurm  run_orbit3.slurm
Sim/include/: App.hpp  Battery.hpp  DepositionMap.hpp  EffusionCell.hpp  GrowthMonitor.hpp  HeaterBank.hpp  Logger.hpp  PowerBus.hpp  SimulationEngine.hpp  SolarArray.hpp  SpartaBridge.hpp  SpartaDiag.hpp  SubstrateHeater.hpp  Subsystem.hpp  TickContext.hpp  TickPhaseEngine.hpp  WakeChamber.hpp  helpers.hpp  orbit.hpp
Sim/logs/: sf_orbit12_111017.err  sf_orbit13_111128.err  sf_orbit14_111297.err  sf_orbit14_111298.err  sf_orbit15_111403.err  sf_orbit15_111404.err  sf_orbit16_111484.err  sf_orbit17_112337.err  sf_orbit18_112800.err  sf_orbit19_113417.err  sf_orbit1_108168.err  sf_orbit1_108434.err  sf_orbit1_108436.err  sf_orbit1_108802.err  sf_orbit1_108934.err  sf_orbit20_113715.err  sf_orbit21_113841.err  sf_orbit22_114493.err  sf_orbit23_114735.err  sf_orbit24_115385.err  sf_orbit25_116568.err  sf_orbit28_117836.err  sf_orbit30_118957.err
Sim/src/: App.cpp  Battery.cpp  DepositionMap.cpp  EffusionCell.cpp  GrowthMonitor.cpp  HeaterBank.cpp  Logger.cpp  PowerBus.cpp  SimulationEngine.cpp  SolarArray.cpp  SpartaBridge.cpp  SpartaBridgeShim.cpp  SpartaDiag.cpp  SubstrateHeater.cpp  TickPhaseEngine.cpp  WakeChamber.cpp  helpers.cpp  importantCmd.txt  importantCmd2.txt  main.cpp  main1.cpp  orbit.cpp  test.py
active_jobs/: V4_job1.txt  V4_job10.txt  V4_job11.txt  V4_job12.txt  V4_job13.txt  V4_job14.txt  V4_job15.txt  V4_job16.txt  V4_job17.txt  V4_job18.txt  V4_job19.txt  V4_job2.txt  V4_job20.txt  V4_job3.txt  V4_job4.txt  V4_job5.txt  V4_job6.txt  V4_job7.txt  V4_job8.txt  V4_job9.txt  auto_test2.txt
active_jobs_testing/: auto_test1.txt  auto_test2.txt
data/raw/: Battery.csv  EffusionCell.csv  EffusionChamberEvents.csv  GrowthMonitor_visualizer.ipynb  HeaterBank.csv  Params.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  dataset_instructions.md  dirunalWorks.csv  instructions_data_example.txt  notes.txt  wake_3probes.csv  wake_4probes.csv  wake_eda.ipynb
data/raw/final_test_before_job/: HeaterBank.csv  SolarArray.csv  WakeChamber.csv  wake_4probes.csv
data/raw/job2/: Battery.csv  EffusionCell.csv  HeaterBank.csv  Orbit.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/jobs2/: Battery.csv  EffusionCell.csv  HeaterBank.csv  Orbit.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/jobs5/: Battery.csv  EffusionCell.csv  GrowthMonitor_jobs5.csv  HeaterBank.csv  Orbit.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/jobs6/: Battery.csv  EffusionCell.csv  HeaterBank.csv  Orbit.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  job6_changes.md  wake_4probes.csv
data/raw/jobs7/: Battery.csv  EffusionCell.csv  HeaterBank.csv  Orbit.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  job7_changes.md  wake_4probes.csv
data/raw/raunak_job/: Battery.csv  EffusionCell.csv  HeaterBank.csv  Orbit.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/sim_debug/: Battery.csv  EffusionCell.csv  GrowthMonitor_sim_debug.csv  HeaterBank.csv  Orbit.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/sim_debug1/: Battery.csv  EffusionCell.csv  GrowthMonitor_sim_debug1.csv  HeaterBank.csv  Orbit.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/sim_debug2/: Battery.csv  EffusionCell.csv  HeaterBank.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/sim_debug3/: Battery.csv  EffusionCell.csv  HeaterBank.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/sim_debug4/: EffusionCell.csv  GrowthMonitor_sim_debug4.csv  HeaterBank.csv  Orbit.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/test_jobs1/: HeaterBank.csv  Params.csv  SimulationEngine.csv  WakeChamber.csv
data/raw/test_jobs2/: Battery.csv  EffusionCell.csv  PowerBus.csv  SolarArray.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/test_sync/: Battery.csv  EffusionCell.csv  HeaterBank.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  WakeChamberEvents.csv  wake_4probes.csv
data/raw/test_sync1/: Battery.csv  EffusionCell.csv  HeaterBank.csv  PowerBus.csv  SimulationEngine.csv  SolarArray.csv  WakeChamber.csv  (+1 more)
input/: Orbit_sim_debug.csv  exec.trace  in.effusion  in.effusion.save  in.test  in.wake  in.wake_final  in.wake_gpu  in.wake_harness  in.wake_old  job_paper1.txt  jobs.txt  jobs12.txt  jobs13.txt  jobs14.txt  jobs16.txt  jobs19.txt  jobs2.txt  jobs24.txt  jobs27.txt  jobs3.txt  log.capi  log.sparta  old_decks.txt  params.inc  test_job.txt  vizualizerScene.py
input/data/: ar.species  ar.vss  o.species  o.vss
input/dump/: shield_geom.csv  wafer_geom.csv  wafer_hits.csv
input/old_jobs/: auto_test1.txt  jobs15.txt  jobs17.txt  jobs18.txt  jobs2.txt  jobs20.txt  jobs21.txt  jobs22.txt  jobs23.txt  jobs25.txt  jobs28.txt  jobs30.txt  jobs4.txt  jobs5.txt  jobs6.txt  jobs7.txt  jobs_raunak.txt  test.txt  v3_job2.txt
input/surf/: cupola.stl  cupola.surf  fix_and_plot_cupola.py  mbe_orifice_10mm.surf  plot_sparta_surf.py  repair_cupola.py  viewCupola.py  wafer_300mm.surf  wsf_org.surf  wsf_org.unix.surf
src/: main.cpp
tests/: CMakeLists.txt  tests.cpp
tests/build-tests/: CMakeCache.txt  Makefile  cmake_install.cmake  runTests
(+20 files in other folders)
